# crop_yield_prediction

./: .gitignore  gee_downloader.ipynb  municipal_shapefiles.ipynb  pyproject.toml
raul_scripts/: SAM_filtro_2_com_mapbiomas.ipynb  get_imgs_mun_gee.ipynb
sits_moco/: .gitignore  Calor_municipio_tiff.py  Mapa_de_calor_parana.ipynb  add_train_valid_eval_split.py  add_train_valid_test_split.py  environment.yml  evaluate_incomplete_series.py  main_yield_regression.py  main_yield_regression_polars.py  preprocess_tiff_to_npy.py  pyproject.toml  utils.py  utils_aggregated.py
sits_moco/datasets/: __init__.py  queue_sampler.py  uscrops_aggregated_npy.py  uscrops_aggregated_npy_polars.py
sits_moco/models/: STNetRegression.py  __init__.py  weight_init.py
sits_moco/preprocess/new_flow/: 0. clean_yields.py
