[project]
name = "sentinel2-mapbiomas-downloader"
version = "1.0.0"
description = "Sentinel-2 Image Downloader for São Paulo with MapBiomas Agriculture Filter"
authors = [{ name = "AI Assistant", email = "assistant@example.com" }]
readme = "README.md"
requires-python = ">=3.11,<=4.0"
dependencies = [
    "sentinelhub>=3.11.1",
    "rasterio>=1.3.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyproj>=3.6.0",
    "fiona>=1.9.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "earthengine-api>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "jupyter>=1.0.0"]
analysis = ["scikit-learn>=1.3.0", "scipy>=1.11.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel2_mapbiomas_downloader"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
